tests/golden/type_errors/array_count_callback_return.err
Type error at 1:33: function `<lambda>` expects return bool, got number
  count([1], fun (value: number): number { return 1; });
                                  ^
